# server/dbscript.js
@@ -56,7 +56,6 @@ db.rooms.insertMany([
 		building: "B1",
 		room_number: 101,
 		capacity: 60,
-		devices: ["light", "fan", "sound_system", "projector", "camera"],
 		corridor_id: "CORRIDOR_B1_1",
 	},
 	{
@@ -65,7 +64,6 @@ db.rooms.insertMany([
 		building: "B1",
 		room_number: 102,
 		capacity: 60,
-		devices: ["light", "fan", "sound_system", "projector", "camera"],
 		corridor_id: "CORRIDOR_B1_1",
 	},
 	{
@@ -74,7 +72,6 @@ db.rooms.insertMany([
 		building: "B1",
 		room_number: 103,
 		capacity: 80,
-		devices: ["light", "fan", "projector", "camera"],
 		corridor_id: "CORRIDOR_B1_3",
 	},
 	{
@@ -83,7 +80,6 @@ db.rooms.insertMany([
 		building: "B1",
 		room_number: 104,
 		capacity: 50,
-		devices: ["light", "fan", "sound_system", "projector", "camera"],
 		corridor_id: "CORRIDOR_B1_4",
 	},
 	{
@@ -92,7 +88,6 @@ db.rooms.insertMany([
 		building: "B2",
 		room_number: 201,
 		capacity: 60,
-		devices: ["light", "fan", "sound_system", "projector", "camera"],
 		corridor_id: "CORRIDOR_B2_1",
 	},
 	{
@@ -101,7 +96,6 @@ db.rooms.insertMany([
 		building: "B2",
 		room_number: 202,
 		capacity: 40,
-		devices: ["light", "fan", "sound_system", "projector", "camera"],
 		corridor_id: "CORRIDOR_B2_2",
 	},
 	{
@@ -110,7 +104,6 @@ db.rooms.insertMany([
 		building: "B2",
 		room_number: 203,
 		capacity: 50,
-		devices: ["light", "fan", "sound_system", "projector", "camera"],
 		corridor_id: "CORRIDOR_B2_3",
 	},
 	{
@@ -119,7 +112,6 @@ db.rooms.insertMany([
 		building: "B2",
 		room_number: 204,
 		capacity: 70,
-		devices: ["light", "fan", "projector", "camera"],
 		corridor_id: "CORRIDOR_B2_4",
 	},
 	{
@@ -128,198 +120,139 @@ db.rooms.insertMany([
 		building: "A1",
 		room_number: 303,
 		capacity: 80,
-		devices: ["light", "fan", "projector", "camera"],
 		corridor_id: "CORRIDOR_A1_3",
 	},
 ]);
 
 // schedules
 
-db.schedules.insertOne(
+db.schedules.insertMany([
 	{
-		_id: ObjectId(),
 		room_id: "ROOM_B1_101",
-		date: ISODate("2025-03-25"),
-		slots: [
-			{
-				period: 1,
-				hour: 7,
-				lecture_title: "C Programming",
-				booked_by: "phung.huanguyen@hcmut.edu.vn",
-				lecturer_id: "GV001",
-			},
-			{
-				period: 2,
-				hour: 8,
-				lecture_title: "Advanced Software Engineering",
-				booked_by: "tuan.anhtruong@hcmut.edu.vn",
-				lecturer_id: "GV002",
-			},
-			{ period: 3, hour: 9, lecture_title: "", booked_by: null },
-			{ period: 4, hour: 10, lecture_title: "", booked_by: null },
-			{ period: 5, hour: 11, lecture_title: "", booked_by: null },
-			{ period: 6, hour: 13, lecture_title: "", booked_by: null },
-			{ period: 7, hour: 14, lecture_title: "", booked_by: null },
-			{ period: 8, hour: 15, lecture_title: "", booked_by: null },
-			{ period: 9, hour: 16, lecture_title: "", booked_by: null },
-			{ period: 10, hour: 17, lecture_title: "", booked_by: null },
-			{ period: 11, hour: 18, lecture_title: "", booked_by: null },
-			{ period: 12, hour: 19, lecture_title: "", booked_by: null },
-		],
+		date: ISODate("2025-03-26T00:00:00Z"),
+		period_1: {
+			hour: 7,
+			lecture_title: "Linear Algebra",
+			booked_by: "pham.tienthanh@hcmut.edu.vn",
+		},
+		period_2: {
+			hour: 8,
+			lecture_title: "Discrete Mathematics",
+			booked_by: "nguyen.lehoa@hcmut.edu.vn",
+		},
+		period_3: {
+			hour: 9,
+			lecture_title: "Probability & Statistics",
+			booked_by: "tran.haianh@hcmut.edu.vn",
+		},
+		period_4: {
+			hour: 10,
+			lecture_title: "Numerical Methods",
+			booked_by: "le.vudat@hcmut.edu.vn",
+		},
+		period_5: {
+			hour: 11,
+			lecture_title: "Compiler Design",
+			booked_by: "nguyen.minhquang@hcmut.edu.vn",
+		},
+		period_6: {
+			hour: 12,
+			lecture_title: "Cybersecurity",
+			booked_by: "pham.ngocthanh@hcmut.edu.vn",
+		},
+		period_7: {
+			hour: 13,
+			lecture_title: "Data Structures",
+			booked_by: "tran.tienkhoa@hcmut.edu.vn",
+		},
+		period_8: {
+			hour: 14,
+			lecture_title: "Algorithms",
+			booked_by: "le.ducthanh@hcmut.edu.vn",
+		},
+		period_9: {
+			hour: 15,
+			lecture_title: "Computer Graphics",
+			booked_by: "nguyen.bichtram@hcmut.edu.vn",
+		},
+		period_10: {
+			hour: 16,
+			lecture_title: "Parallel Computing",
+			booked_by: "pham.nguyetanh@hcmut.edu.vn",
+		},
+		period_11: {
+			hour: 17,
+			lecture_title: "IoT Fundamentals",
+			booked_by: "do.hoangtu@hcmut.edu.vn",
+		},
+		period_12: {
+			hour: 18,
+			lecture_title: "Blockchain Basics",
+			booked_by: "nguyen.vannam@hcmut.edu.vn",
+		},
 	},
 	{
-		_id: ObjectId(),
-		room_id: "ROOM_B1_102",
-		date: ISODate("2025-03-25"),
-		slots: [
-			{
-				period: 1,
-				hour: 7,
-				lecture_title: "DSA",
-				booked_by: "tuan.anhtruong@hcmut.edu.vn",
-				lecturer_id: "GV001",
-			},
-			{
-				period: 2,
-				hour: 8,
-				lecture_title: "Computer Network",
-				booked_by: "phung.nguyenhua@hcmut.edu.vn",
-				lecturer_id: "GV003",
-			},
-			{ period: 3, hour: 9, lecture_title: "", booked_by: null },
-			{ period: 4, hour: 10, lecture_title: "", booked_by: null },
-			{ period: 5, hour: 11, lecture_title: "", booked_by: null },
-			{ period: 6, hour: 13, lecture_title: "", booked_by: null },
-			{ period: 7, hour: 14, lecture_title: "", booked_by: null },
-			{ period: 8, hour: 15, lecture_title: "", booked_by: null },
-			{ period: 9, hour: 16, lecture_title: "", booked_by: null },
-			{ period: 10, hour: 17, lecture_title: "", booked_by: null },
-			{ period: 11, hour: 18, lecture_title: "", booked_by: null },
-			{ period: 12, hour: 19, lecture_title: "", booked_by: null },
-		],
+		room_id: "ROOM_B1_101",
+		date: ISODate("2025-03-27T00:00:00Z"),
+		period_1: {
+			hour: 7,
+			lecture_title: "Computer Architecture",
+			booked_by: "pham.tienthanh@hcmut.edu.vn",
+		},
+		period_2: {
+			hour: 8,
+			lecture_title: "Software Engineering",
+			booked_by: "nguyen.lehoa@hcmut.edu.vn",
+		},
+		period_3: {
+			hour: 9,
+			lecture_title: "Operating Systems",
+			booked_by: "tran.haianh@hcmut.edu.vn",
+		},
+		period_4: {
+			hour: 10,
+			lecture_title: "Machine Learning",
+			booked_by: "le.vudat@hcmut.edu.vn",
+		},
+		period_5: {
+			hour: 11,
+			lecture_title: "Artificial Intelligence",
+			booked_by: "nguyen.minhquang@hcmut.edu.vn",
+		},
+		period_6: {
+			hour: 12,
+			lecture_title: "Mobile Development",
+			booked_by: "pham.ngocthanh@hcmut.edu.vn",
+		},
+		period_7: {
+			hour: 13,
+			lecture_title: "Database Systems",
+			booked_by: "tran.tienkhoa@hcmut.edu.vn",
+		},
+		period_8: {
+			hour: 14,
+			lecture_title: "Cloud Computing",
+			booked_by: "le.ducthanh@hcmut.edu.vn",
+		},
+		period_9: {
+			hour: 15,
+			lecture_title: "Big Data Analytics",
+			booked_by: "nguyen.bichtram@hcmut.edu.vn",
+		},
+		period_10: {
+			hour: 16,
+			lecture_title: "Internet of Things",
+			booked_by: "pham.nguyetanh@hcmut.edu.vn",
+		},
+		period_11: {
+			hour: 17,
+			lecture_title: "Human-Computer Interaction",
+			booked_by: "do.hoangtu@hcmut.edu.vn",
+		},
+		period_12: {
+			hour: 18,
+			lecture_title: "Network Security",
+			booked_by: "nguyen.vannam@hcmut.edu.vn",
+		},
 	},
-	{
-		_id: ObjectId(),
-		room_id: "ROOM_B1_103",
-		date: ISODate("2025-03-25"),
-		slots: [
-			{
-				period: 1,
-				hour: 7,
-				lecture_title: "DSA",
-				booked_by: "tuan.anhtruong@hcmut.edu.vn",
-				lecturer_id: "GV001",
-			},
-			{
-				period: 2,
-				hour: 8,
-				lecture_title: "Computer Network",
-				booked_by: "duylai.le@hcmut.edu.vn",
-				lecturer_id: "GV004",
-			},
-			{ period: 3, hour: 9, lecture_title: "", booked_by: null },
-			{ period: 4, hour: 10, lecture_title: "", booked_by: null },
-			{ period: 5, hour: 11, lecture_title: "", booked_by: null },
-			{ period: 6, hour: 13, lecture_title: "", booked_by: null },
-			{ period: 7, hour: 14, lecture_title: "", booked_by: null },
-			{ period: 8, hour: 15, lecture_title: "", booked_by: null },
-			{ period: 9, hour: 16, lecture_title: "", booked_by: null },
-			{ period: 10, hour: 17, lecture_title: "", booked_by: null },
-			{ period: 11, hour: 18, lecture_title: "", booked_by: null },
-			{ period: 12, hour: 19, lecture_title: "", booked_by: null },
-		],
-	},
-	{
-		_id: ObjectId(),
-		room_id: "ROOM_B2_201",
-		date: ISODate("2025-03-25"),
-		slots: [
-			{
-				period: 1,
-				hour: 7,
-				lecture_title: "Computer Network",
-				booked_by: "phung.nguyenhua@hcmut.edu.vn",
-				lecturer_id: "GV003",
-			},
-			{
-				period: 2,
-				hour: 8,
-				lecture_title: "DSA",
-				booked_by: "tuan.anhtruong@hcmut.edu.vn",
-				lecturer_id: "GV001",
-			},
-			{ period: 3, hour: 9, lecture_title: "", booked_by: null },
-			{ period: 4, hour: 10, lecture_title: "", booked_by: null },
-			{ period: 5, hour: 11, lecture_title: "", booked_by: null },
-			{ period: 6, hour: 13, lecture_title: "", booked_by: null },
-			{ period: 7, hour: 14, lecture_title: "", booked_by: null },
-			{ period: 8, hour: 15, lecture_title: "", booked_by: null },
-			{ period: 9, hour: 16, lecture_title: "", booked_by: null },
-			{ period: 10, hour: 17, lecture_title: "", booked_by: null },
-			{ period: 11, hour: 18, lecture_title: "", booked_by: null },
-			{ period: 12, hour: 19, lecture_title: "", booked_by: null },
-		],
-	},
-	{
-		_id: ObjectId(),
-		room_id: "ROOM_B2_202",
-		date: ISODate("2025-03-25"),
-		slots: [
-			{
-				period: 1,
-				hour: 7,
-				lecture_title: "Computer Network",
-				booked_by: "duylai.le@hcmut.edu.vn",
-				lecturer_id: "GV004",
-			},
-			{
-				period: 2,
-				hour: 8,
-				lecture_title: "DSA",
-				booked_by: "tuan.anhtruong@hcmut.edu.vn",
-				lecturer_id: "GV001",
-			},
-			{ period: 3, hour: 9, lecture_title: "", booked_by: null },
-			{ period: 4, hour: 10, lecture_title: "", booked_by: null },
-			{ period: 5, hour: 11, lecture_title: "", booked_by: null },
-			{ period: 6, hour: 13, lecture_title: "", booked_by: null },
-			{ period: 7, hour: 14, lecture_title: "", booked_by: null },
-			{ period: 8, hour: 15, lecture_title: "", booked_by: null },
-			{ period: 9, hour: 16, lecture_title: "", booked_by: null },
-			{ period: 10, hour: 17, lecture_title: "", booked_by: null },
-			{ period: 11, hour: 18, lecture_title: "", booked_by: null },
-			{ period: 12, hour: 19, lecture_title: "", booked_by: null },
-		],
-	},
-	{
-		_id: ObjectId(),
-		room_id: "ROOM_B2_203",
-		date: ISODate("2025-03-25"),
-		slots: [
-			{
-				period: 1,
-				hour: 7,
-				lecture_title: "DSA",
-				booked_by: "tuan.anhtruong@hcmut.edu.vn",
-				lecturer_id: "GV001",
-			},
-			{
-				period: 2,
-				hour: 8,
-				lecture_title: "Computer Network",
-				booked_by: "phung.nguyenhua@hcmut.edu.vn",
-				lecturer_id: "GV003",
-			},
-			{ period: 3, hour: 9, lecture_title: "", booked_by: null },
-			{ period: 4, hour: 10, lecture_title: "", booked_by: null },
-			{ period: 5, hour: 11, lecture_title: "", booked_by: null },
-			{ period: 6, hour: 13, lecture_title: "", booked_by: null },
-			{ period: 7, hour: 14, lecture_title: "", booked_by: null },
-			{ period: 8, hour: 15, lecture_title: "", booked_by: null },
-			{ period: 9, hour: 16, lecture_title: "", booked_by: null },
-			{ period: 10, hour: 17, lecture_title: "", booked_by: null },
-			{ period: 11, hour: 18, lecture_title: "", booked_by: null },
-			{ period: 12, hour: 19, lecture_title: "", booked_by: null },
-		],
-	}
-);
+]);
