# server/index.js
@@ -30,9 +30,9 @@ const Room = require("./models/Room");
 
 //import routes
 const roomRoutes = require("./routes/room.routes");
-const studentRoutes = require("./routes/student.routes");
-const lecturerRoutes = require("./routes/lecturer.routes");
-const scheduleRoutes = require("./routes/schedule.routes");
+// const studentRoutes = require("./routes/student.routes");
+// const lecturerRoutes = require("./routes/lecturer.routes");
+// const scheduleRoutes = require("./routes/schedule.routes");
 
 // Middleware
 app.use(cors());
@@ -70,21 +70,22 @@ app.post("/changePassword", authMiddleware, changePassword);
 
 app.post("/checkOTP", OTPCheck);
 
-app.post("/resetPassword", resetPassword);
+//app.post("/resetPassword", resetPassword);
 
 // app.use('/room', roomRoutes);
 // vì 3 endpoint còn lại đều là dạng /room/... nên tui gộp lại
 // và phần endpoint còn lại mng vô routes/room.routes.js viết
-app.use("/api/rooms", roomRoutes);
+app.use("/rooms", roomRoutes);
+
 // app.use("/api/students", studentRoutes);
 // app.use("/api/lecturers", lecturerRoutes);
 // app.use("/api/schedules", scheduleRoutes);
 
-app.get("/api/rooms", async (req, res) => {
-	try {
-		const rooms = await Room.find();
-		res.json(rooms);
-	} catch (err) {
-		res.status(500).json({ error: "Lỗi lấy danh sách phòng" });
-	}
-});
+// app.get("/api/rooms", async (req, res) => {
+// 	try {
+// 		const rooms = await Room.find();
+// 		res.json(rooms);
+// 	} catch (err) {
+// 		res.status(500).json({ error: "Lỗi lấy danh sách phòng" });
+// 	}
+// });
